TradingBot_v0.0.2(stable + refactoring)