@@ -8,65 +8,92 @@ import com.example.demo.services.api.BinanceAPI;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
+import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CalculatorService {
 
     /**
-     * @see #getTodayProfitUSDT() - Расчёт реализованной прибыли за текущий день в USDT.
-     * @see #getAllProfitPercent() - Расчёт общей доходности с начала работы бота в процентах.
+     * Сервис для расчёта различных финансовых метрик бота.
      *
-     * @see #getUnrealizedPnLUsdt() - Расчёт суммарного нереализованного (грязного) PnL всех активных сделок в USDT.
-     * @see #getUnrealizedPnLUsdtWithFee() - Расчёт суммарного нереализованного PnL всех активных сделок в USDT с учётом предстоящей комиссии на продажу.
-     *
-     * @see #getActiveProfitPercent(Trade, double) - Расчёт нереализованной (грязной) доходности одной активной сделки в процентах.
-     * @see #getNetResultPercent(double, double, String, String) - Расчёт чистой доходности одной сделки в процентах с учётом комиссии Binance.
-     *
-     * @see #getTotalEquity() - Расчёт текущего общего эквити аккаунта.
-     * @see #getTotalFeePercent(String) - Расчёт общей комиссии за полный цикл сделки (покупка + продажа) в процентах.
-     * @see #getOccupiedBalance() - Расчёт суммы USDT, вложенной в активные сделки (по объёму на момент входа).
-     *
-     * @see #getActiveTrades() - Список активных сделок
+     * @see #getRealizedProfit() - Общий реализованный профит (только закрытые сделки)
+     * @see #getTodayRealizedProfit() - Реализованная прибыль за текущий день (только закрытые сделки сегодня)
+     * @see #getUnrealizedPnLUsdt() - Суммарный нереализованный (грязный) PnL всех активных сделок в USDT
+     * @see #getUnrealizedPnLUsdtWithFee() - Суммарный нереализованный PnL всех активных сделок в USDT с учётом предстоящей комиссии на продажу
+     * @see #getTodayProfitUSDT() - Общая прибыль за текущий день в USDT (реализованная + нереализованная)
+     * @see #getTodayProfitPercent() - Доходность за текущий день в процентах
+     * @see #getAllProfitPercent() - Общая доходность с начала работы бота в процентах (учитывает реализованную и нереализованную прибыль)
+     * @see #getActiveProfitPercent(Trade, double) - Нереализованная (грязная) доходность одной активной сделки в процентах
+     * @see #getNetResultPercent(double, double, String, String) - Чистая доходность одной сделки в процентах с учётом комиссии Binance
+     * @see #getTotalFeePercent(String) - Общая комиссия за полный цикл сделки (покупка + продажа) в процентах
+     * @see #getTotalEquity() - Текущий общий эквити аккаунта (свободные USDT + рыночная стоимость открытых позиций)
+     * @see #getOccupiedBalance() - Сумма USDT, вложенная в активные сделки (по текущей рыночной стоимости)
      */
 
     private final BinanceAPI binanceAPI;
     private final BotSettingsRepository botSettingsRepository;
     private final TradeRepository tradeRepository;
 
+    private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("dd.MM.yyyy");
+
     @Autowired
     public CalculatorService(BinanceAPI binanceAPI, BotSettingsRepository botSettingsRepository,
                              TradeRepository tradeRepository) {
         this.binanceAPI = binanceAPI;
-
         this.botSettingsRepository = botSettingsRepository;
         this.tradeRepository = tradeRepository;
     }
 
     /**
-     * Список активных сделок
-     * @return Список активных сделок
+     * Общий реализованный профит (только закрытые сделки)
+     *
+     * @return суммарная реализованная прибыль в USDT
+     */
+    public double getRealizedProfit() {
+        return tradeRepository.findAll().stream()
+                .filter(t -> "CLOSED".equals(t.getStatus()))
+                .mapToDouble(Trade::getProfit)
+                .sum();
+    }
+
+    /**
+     * Реализованная прибыль за текущий день (только закрытые сделки сегодня)
+     *
+     * @return реализованная прибыль за сегодня в USDT
+     */
+    public double getTodayRealizedProfit() {
+        String today = LocalDate.now().format(DATE_FORMATTER);
+        return tradeRepository.findAll().stream()
+                .filter(t -> "CLOSED".equals(t.getStatus()))
+                .filter(t -> t.getExitTime() != null && t.getExitTime().startsWith(today))
+                .mapToDouble(Trade::getProfit)
+                .sum();
+    }
+
+    /**
+     * Список активных сделок (внутренний метод)
+     *
+     * @return список активных сделок
      */
     private List<Trade> getActiveTrades() {
         return tradeRepository.findAll().stream()
                 .filter(t -> "OPEN".equals(t.getStatus()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * Расчёт чистой доходности одной сделки в процентах с учётом комиссии Binance.
+     * Чистая доходность одной сделки в процентах с учётом комиссии Binance.
      * <p>
-     * Комиссия считается как сумма taker-комиссии за покупку и продажу (fees[1] * 2).
+     * Комиссия считается как сумма taker-комиссии за покупку и продажу (taker * 2).
      * Для SHORT-сделок изменение цены инвертируется.
      *
      * @param entryPrice цена входа в сделку
      * @param exitPrice  цена выхода (или текущая рыночная цена для активной сделки)
      * @param symbol     торговая пара (необходима для получения актуальной комиссии)
      * @param type       тип сделки ("LONG" или "SHORT")
-     * @return чистая доходность в процентах (с вычетом комиссии)
+     * @return чистая доходность в процентах
      */
     public double getNetResultPercent(double entryPrice, double exitPrice, String symbol, String type) {
         if (entryPrice <= 0 || exitPrice <= 0) return 0.0;
@@ -79,61 +106,53 @@ public class CalculatorService {
     }
 
     /**
-     * Расчёт реализованной прибыли за текущий день в USDT.
-     * <p>
-     * Учитываются только закрытые сделки (status = "CLOSED"), завершённые сегодня.
-     * Прибыль в каждой сделке уже сохранена с учётом комиссии (через getNetResultPercent).
+     * Общая прибыль за текущий день в USDT (реализованная + нереализованная с комиссией)
      *
-     * @return сумма реализованной прибыли за день в USDT
+     * @return прибыль за сегодня в USDT
      */
     public double getTodayProfitUSDT() {
-        String todayPrefix = LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd.MM.yyyy"));
-        return tradeRepository.findAll().stream()
-                .filter(t -> "CLOSED".equals(t.getStatus()))
-                .filter(t -> t.getExitTime() != null && t.getExitTime().startsWith(todayPrefix))
-                .mapToDouble(Trade::getProfit)
-                .sum();
+        return getTodayRealizedProfit() + getUnrealizedPnLUsdtWithFee();
     }
 
     /**
-     * Расчёт реализованной доходности за текущий день в процентах.
+     * Доходность за текущий день в процентах.
      * <p>
-     * База расчёта — общий эквити на начало дня (текущий эквити минус сегодняшняя реализованная прибыль).
+     * База расчёта — начальный баланс из настроек (BotSettings.balance).
      *
-     * @return доходность за день в процентах (округлено до 2 знаков)
+     * @return доходность за день в процентах
      */
     public double getTodayProfitPercent() {
-        double todayProfitUSDT = getTodayProfitUSDT();
-        double currentEquity = getTotalEquity();
-        double startEquityToday = currentEquity - todayProfitUSDT;
+        BotSettings settings = botSettingsRepository.findById("MAIN_SETTINGS").orElse(new BotSettings());
+        double initial = settings.getBalance();
 
-        if (startEquityToday <= 0) return 0.0;
-        return Math.round((todayProfitUSDT / startEquityToday) * 10000.0) / 100.0;
+        if (initial <= 0) return 0.0;
+
+        double todayProfit = getTodayProfitUSDT();
+        return todayProfit / initial * 100.0;
     }
 
     /**
-     * Расчёт общей доходности с начала работы бота в процентах.
+     * Общая доходность с начала работы бота в процентах.
      * <p>
      * Сравнивается текущий эквити (свободные USDT + рыночная стоимость открытых позиций)
      * с начальным балансом из настроек (BotSettings.balance).
-     * Включает нереализованную (грязную) прибыль активных сделок.
      *
-     * @return общая доходность в процентах (округлено до 2 знаков)
+     * @return общая доходность в процентах
      */
     public double getAllProfitPercent() {
-        BotSettings settings = botSettingsRepository.findById("MAIN_SETTINGS").orElse(null);
-        if (settings == null || settings.getBalance() <= 0) return 0.0;
-
+        BotSettings settings = botSettingsRepository.findById("MAIN_SETTINGS").orElse(new BotSettings());
         double initial = settings.getBalance();
-        double currentEquity = getTotalEquity();
-        double diff = currentEquity - initial;
-        return Math.round((diff / initial) * 10000.0) / 100.0;
+
+        if (initial <= 0) return 0.0;
+
+        double totalEquity = getTotalEquity();
+        return (totalEquity - initial) / initial * 100.0;
     }
 
     /**
-     * Расчёт нереализованной (грязной) доходности одной активной сделки в процентах.
+     * Нереализованная (грязная) доходность одной активной сделки в процентах.
      * <p>
-     * Комиссия не вычитается — это "текущий" Рост/падение без учёта затрат на закрытие.
+     * Комиссия не вычитается.
      *
      * @param trade        объект активной сделки
      * @param currentPrice текущая рыночная цена актива
@@ -147,7 +166,7 @@ public class CalculatorService {
     }
 
     /**
-     * Расчёт суммарного нереализованного (грязного) PnL всех активных сделок в USDT.
+     * Суммарный нереализованный (грязный) PnL всех активных сделок в USDT.
      * <p>
      * Комиссия не учитывается.
      *
@@ -155,33 +174,37 @@ public class CalculatorService {
      */
     public double getUnrealizedPnLUsdt() {
         return getActiveTrades().stream()
-                .mapToDouble(trade -> {
-                    double currentPrice = binanceAPI.getCurrentPrice(trade.getAsset());
-                    double pnlPercent = getActiveProfitPercent(trade, currentPrice);
-                    return trade.getVolume() * (pnlPercent / 100.0);
+                .mapToDouble(t -> {
+                    double currentPrice = binanceAPI.getCurrentPrice(t.getAsset());
+                    if (currentPrice <= 0) return 0.0;
+                    double percent = getResultPercent(t.getEntryPrice(), currentPrice, t.getAsset(), t.getType());
+                    return t.getVolume() * (percent / 100.0);
                 })
                 .sum();
     }
 
     /**
-     * Расчёт суммарного нереализованного PnL всех активных сделок в USDT с учётом предстоящей комиссии на продажу.
-     * <p>
-     * Используется для более реалистичной оценки потенциальной прибыли при закрытии.
+     * Суммарный нереализованный PnL всех активных сделок в USDT с учётом предстоящей комиссии на продажу.
      *
      * @return суммарный чистый нереализованный PnL в USDT
      */
     public double getUnrealizedPnLUsdtWithFee() {
         return getActiveTrades().stream()
-                .mapToDouble(trade -> {
-                    double currentPrice = binanceAPI.getCurrentPrice(trade.getAsset());
-                    double netPercent = getNetResultPercent(trade.getEntryPrice(), currentPrice, trade.getAsset(), trade.getType());
-                    return trade.getVolume() * (netPercent / 100.0);
+                .mapToDouble(t -> {
+                    double currentPrice = binanceAPI.getCurrentPrice(t.getAsset());
+                    if (currentPrice <= 0) return 0.0;
+                    double[] fees = binanceAPI.getTradeFee(t.getAsset());
+                    double takerFee = fees[1]; // taker для выхода
+                    double percent = getResultPercent(t.getEntryPrice(), currentPrice, t.getAsset(), t.getType());
+                    double gross = t.getVolume() * (percent / 100.0);
+                    double feeCost = t.getVolume() * takerFee;
+                    return gross - feeCost;
                 })
                 .sum();
     }
 
     /**
-     * Расчёт общей комиссии за полный цикл сделки (покупка + продажа) в процентах.
+     * Общая комиссия за полный цикл сделки (покупка + продажа) в процентах.
      *
      * @param symbol торговая пара
      * @return комиссия в процентах (taker * 2)
@@ -192,7 +215,7 @@ public class CalculatorService {
     }
 
     /**
-     * Расчёт текущего общего эквити аккаунта.
+     * Текущий общий эквити аккаунта.
      * <p>
      * Эквити = свободные USDT + рыночная стоимость всех открытых позиций.
      *
@@ -200,20 +223,40 @@ public class CalculatorService {
      */
     public double getTotalEquity() {
         double freeUsdt = binanceAPI.getAccountBalance();
-        double locked = getActiveTrades().stream()
-                .mapToDouble(trade -> trade.getQuantity() * binanceAPI.getCurrentPrice(trade.getAsset()))
+        double openPositionsValue = getActiveTrades().stream()
+                .mapToDouble(t -> {
+                    double currentPrice = binanceAPI.getCurrentPrice(t.getAsset());
+                    if (currentPrice <= 0) return 0.0;
+                    return t.getQuantity() * currentPrice;
+                })
                 .sum();
-        return freeUsdt + locked;
+        return freeUsdt + openPositionsValue;
     }
 
     /**
-     * Расчёт суммы USDT, вложенной в активные сделки (по объёму на момент входа).
+     * Сумма USDT, вложенная в активные сделки (по текущей рыночной стоимости).
      *
      * @return сумма в USDT, занятая в открытых позициях
      */
     public double getOccupiedBalance() {
         return getActiveTrades().stream()
-                .mapToDouble(Trade::getVolume)
+                .mapToDouble(t -> {
+                    double currentPrice = binanceAPI.getCurrentPrice(t.getAsset());
+                    if (currentPrice <= 0) return t.getVolume(); // fallback на volume при входе
+                    return t.getQuantity() * currentPrice;
+                })
                 .sum();
+    }
+
+    /**
+     * Внутренний метод: расчёт доходности в процентах без комиссии
+     */
+    private double getResultPercent(double entry, double exit, String symbol, String type) {
+        if (entry <= 0 || exit <= 0) return 0.0;
+        if ("LONG".equals(type)) {
+            return (exit - entry) / entry * 100.0;
+        } else {
+            return (entry - exit) / entry * 100.0;
+        }
     }
 }
